<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="@string/bg_people"
        android:src="@drawable/bg_bottom_gray" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="@string/bg_people"
        android:src="@drawable/bg_bottom_gray" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:contentDescription="@string/bg_camera"
        android:scaleType="fitEnd"
        android:src="@drawable/bg_camera" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#CCFFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_panel"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/tvCameraDescLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_desc"
                    android:textSize="12sp" >
                </TextView>

                <EditText
                    android:id="@+id/etCameraDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/camera_desc"
                    android:inputType="text"
                    android:textSize="12sp" >
                </EditText>

                <TextView
                    android:id="@+id/tvCameraLocationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_location"
                    android:textSize="12sp" >
                </TextView>

                <EditText
                    android:id="@+id/etCameraLocation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/camera_location"
                    android:inputType="text"
                    android:textSize="12sp" >
                </EditText>

                <TextView
                    android:id="@+id/tvCameraLocationAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_location_address"
                    android:textSize="12sp"
                    android:visibility="gone" >
                </TextView>

                <EditText
                    android:id="@+id/etCameraLocationAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/camera_location_address"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:visibility="gone" >
                </EditText>

                <TextView
                    android:id="@+id/tvCameraImageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_image"
                    android:textSize="12sp" >
                </TextView>

                <Button
                    android:id="@+id/butCameraCapture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="captureCamera"
                    android:text="@string/capture_camera" />

                <ImageView
                    android:id="@+id/ivCameraImage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/camera_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/no_camera" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/butCameraSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendCamera"
                android:text="@string/send_camera" />

            <Button
                android:id="@+id/butCameraSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveCamera"
                android:text="@string/save_camera" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>