<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:contentDescription="@string/bg_people"
        android:src="@drawable/bg_bottom_gray" />
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_gravity="right|center_vertical"
        android:contentDescription="@string/bg_camera"
        android:src="@drawable/bg_camera" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#CCFFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_panel"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
            	android:id="@+id/listOfCameras"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
			</LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/butSendCameras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_cameras" />

    </LinearLayout>

</FrameLayout>